[package]
name = "tetris_backend"
version = "0.1.0"
authors = ["Matthew Krager <matthewkrager@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket="0.4.2"
ws="*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["serve"]
